Fix overflow image on small device

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -13,8 +13,8 @@ body {
   img {
     display: block;
     position: absolute;
-    width: 512px;
-    height: 512px;
+    width: 90%;
+    max-width: 512px;
     top: 0;
     bottom: 0;
     left: 0;
